--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,23 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <FrameLayout
-        android:id="@+id/LinearLayout1"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="欢迎"
+            android:text="@string/welcome"
             android:gravity="center"
-            android:textSize="20dp"
+            android:textSize="20sp"
             />
-    </FrameLayout>
+</FrameLayout>
 
-
-
-</android.support.constraint.ConstraintLayout>
