--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -7,19 +7,19 @@
      style="@style/style_video_view" />
 
  <TextView
-     android:layout_gravity="right"
+     android:layout_gravity="end"
+     android:text="@string/skip"
+     android:textSize="14sp"
      android:gravity="center"
      android:id="@+id/textView"
      android:layout_width="50dp"
      android:layout_height="wrap_content"
-     android:text="Skip"
-     android:textSize="14dp"
      android:textColor="@color/colorVideoView"
      android:layout_marginRight="5dp"
-
+     android:layout_marginEnd="5dp"
      android:layout_marginTop="5dp"
      android:background="@drawable/shape_splash"
-     />
+    />
 
 
 </FrameLayout>
