--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout android:id="@+id/LinearLayout1"
+<RelativeLayout android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android">
-        <TextView
+
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="@string/welcome"
-            android:gravity="center"
-            android:textSize="20sp"
-            />
-</FrameLayout>
+            android:layout_above="@+id/fl_main_home"
+            >
+
+                <android.support.design.widget.FloatingActionButton
+                    android:layout_gravity="end|bottom"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="40sp"
+                    android:layout_marginBottom="40sp" />
+
+
+        </FrameLayout>
+
+
+
+
+        <FrameLayout
+            android:id="@+id/fl_main_home"
+            android:layout_width="match_parent"
+            android:layout_height="60sp"
+            android:layout_alignParentBottom="true"
+                >
+                <RadioGroup
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/color_30_black"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+                        <RadioButton
+                            android:drawableTop="@drawable/seletor_main_top_shanhai"
+                            android:text="@string/Shanghai"
+                            style="@style/main_tab_rb_style"
+
+                            />
+                        <RadioButton
+                            android:drawableTop="@drawable/seletor_main_top_hangzhou"
+                            android:text="@string/Hangzhou"
+                            style="@style/main_tab_rb_style"
+                            />
+                </RadioGroup>
+        </FrameLayout>
+</RelativeLayout>
 
