--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,6 +17,14 @@
         <item name="android:layout_height">match_parent</item>
     </style>
 
+    <style name="main_tab_rb_style">
+        <item name="android:drawablePadding">2sp</item>
+        <item name="android:button">@null</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
 
 
 </resources>
