--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,4 +1,5 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -11,7 +12,7 @@
      android:text="@string/skip"
      android:textSize="14sp"
      android:gravity="center"
-     android:id="@+id/textView"
+     android:id="@+id/Skip_tv"
      android:layout_width="50dp"
      android:layout_height="wrap_content"
      android:textColor="@color/colorVideoView"
@@ -19,7 +20,7 @@
      android:layout_marginEnd="5dp"
      android:layout_marginTop="5dp"
      android:background="@drawable/shape_splash"
-    />
+     tools:ignore="RtlHardcoded" />
 
 
 </FrameLayout>
