--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
         <FrameLayout
+            android:id="@+id/Fragment_content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@+id/fl_main_home"
