--- a/app/src/main/res/layout/item_shanghai_fragment_horizontal.xml
+++ b/app/src/main/res/layout/item_shanghai_fragment_horizontal.xml
@@ -6,7 +6,7 @@
 
 
 <androidx.recyclerview.widget.RecyclerView
-    android:id="@+id/item_shanghai_rv"
+    android:id="@+id/item_shanghai_horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     >
